<resources>
    <string name="app_name">StasYanDex</string>
    <string name="getDirs">Get dirs!</string>
    <string name="default_lang_ru">ru</string>
    <string name="textField_hint">Что переводим?</string>
    <string name="fake_sound_button">fake sound button</string>
    <string name="fake_mic_button">fake mic button</string>
    <string name="switches_to_translation_api">Switches to translation API</string>
    <string name="switches_to_history_fragment">Switches to History fragment</string>
    <string name="fake_preferencies_button">Fake Preferencies button</string>
    <string name="get_translation">Оп!</string>
    <string name="button_preferences">Настройки</string>
    <string name="button_history">История</string>
    <string name="button_translate">Перевод</string>
    <string name="cd_search_ico">Не поверишь: значок поиска</string>
    <string name="ib_cross_description">Шобы текст стират</string>
    <string name="av_lang_close_button">Закрыть</string>
    <string name="tv_choose_language">Выбор языка</string>
    <string name="translate_to">Язык перевода</string>
    <string name="translate_from">Язык ввода</string>
    <string name="ib_switch_direction">Поменять направление</string>
    <string name="hint_history_search">Поиск в истории</string>

</resources>
