<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="325dp"
        android:layout_height="74dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/textField_hint"
        android:inputType="text"
        android:textAlignment="gravity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="здарова" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/ib_cross_description"
        app:srcCompat="@drawable/ic_clear_black_24dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageButton
        android:id="@+id/ib_mic"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/fake_mic_button"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:srcCompat="@drawable/ic_mic_black_24dp" />

    <ImageButton
        android:id="@+id/ib_volume"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/fake_sound_button"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/ib_mic"
        app:srcCompat="@drawable/ic_volume_up_black_24dp" />

    <Button
        android:id="@+id/bt_getTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/get_translation"
        app:layout_constraintRight_toRightOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_goneMarginEnd="0dp" />

    <TextView
        android:id="@+id/tv_translation_result"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_getTranslation"
        tools:text="hello ept" />

    <include
        layout="@layout/dictionary_layout"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_translation_result" />

</android.support.constraint.ConstraintLayout>